--- a/templates/base.html
+++ b/templates/base.html
@@ -180,7 +180,7 @@
 		<td class="align-right footer">
             <div class="p_l">
                 <div class="wh_normal">
-                    <a href="/about/">о нас</a> |
+                    <a href="{% url 'pages:about' %}">о нас</a> |
                     <a href="{% static 'i/banner/bun2_88x31_1.gif' %}">наша кнопка</a> |
                     <a href="/advert/">реклама на сайте</a> |
                     <!--noindex-->
