--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 
-{% load static %}
-
-{% block title %}{{ partition.name }}{% if page_obj.number > 1 %}, страница {{ page_obj.number }}{% endif %} - ФОРУМ.мск{% endblock %}
-
-{% block description %}{{ partition.name }}{% endblock %}
+{% block title %}О нас - ФОРУМ.мск{% endblock %}
 
 {% block content %}
 <div class="big1 or">О нас</div>
