--- a/templates/base.html
+++ b/templates/base.html
@@ -181,8 +181,8 @@
             <div class="p_l">
                 <div class="wh_normal">
                     <a href="{% url 'pages:about' %}">о нас</a> |
-                    <a href="{% static 'i/banner/bun2_88x31_1.gif' %}">наша кнопка</a> |
-                    <a href="/advert/">реклама на сайте</a> |
+                    <a href="{% static 'i/banner/bun_88x31_1.gif' %}">наша кнопка</a> |
+                    <a href="{% url 'pages:advert' %}">реклама на сайте</a> |
                     <!--noindex-->
                     <a rel="nofollow" href="http://spreadsheets.google.com/viewform?formkey=dHprVFlvQ0tMbjVscVRvMGM5Z1BmTnc6MQ">
                         <span style="color:red">связаться с нами</span>
