--- a/templates/incl/header.html
+++ b/templates/incl/header.html
@@ -83,7 +83,7 @@
 		<td class="clear w2">&nbsp;</td>
         <th>
             <div class=p_h2>
-                <a href="/opposition_hoop/">Кольцо&nbsp;оппозиции</a>
+                <a href="{% url 'pages:opposition' %}">Кольцо&nbsp;оппозиции</a>
             </div>
         </th>
 		<td class="clear w2">&nbsp;</td>
