--- a/templates/base.html
+++ b/templates/base.html
@@ -132,7 +132,7 @@
         </td>
         <td class="valign-top align-center">
             &nbsp;&nbsp;
-            <a href="/opposition_hoop/">
+            <a href="{% url 'pages:opposition' %}">
                 <img src="{% static 'i/banner/bun2_88x31_1.gif' %}" width="88" height="31" alt="">
             </a>
         </td>
