--- a/templates/articles/video.html
+++ b/templates/articles/video.html
@@ -3,5 +3,161 @@
 {% load static %}
 
 {% block content %}
-    video index
+
+    {% if main_news %}
+        {% if main_material %}
+            <table class="full-table">
+                <tr>
+                    <td>
+                        <div class="big1 or">Репортаж дня</div>
+                        <div style="width:1px; height:1px"><!-- --></div>
+                    </td>
+                    <td>&nbsp;</td>
+                    <td>
+                        <div class="big1 or">Главный сюжет</div>
+                        <div style="width:1px; height:1px"><!-- --></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="valign-top wp50 hp100">
+                        {% include 'incl/article_block.html' with article=main_news color='bgFFF0E6' %}
+                    </td>
+                    <td class="w7">
+                        <div style="width:7px; height:1px"><!-- --></div>
+                    </td>
+                    <td class="valign-top wp50 hp100">
+                        {% include 'incl/article_block.html' with article=main_material color='bgFFF0E6' %}
+                    </td>
+                </tr>
+            </table>
+        {% else %}
+            {% with article=main_news %}
+                <table class="full-table">
+                    <tr>
+                        <td>
+                            <div class="big1 or">{{ article.title }}</div>
+                            <div style="width:1px; height:1px"><!-- --></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="valign-top hp100 wp100">
+                            <table class="full-table hp100 bgFFF0E6">
+                                <tr>
+                                    <td colspan="3" class="hp100 valign-top border_or">
+                                        <table width="100%">
+                                            <tr>
+                                                <td class="valign-top">{{ article.video_code|safe }}</td>
+                                                <td class="valign-top">
+                                                    <div class="normal">
+                                                        <span>
+                                                            {% include 'authors/incl/cover_name.html' with article=article %}
+                                                            {{ article.publish_date|date:'d.m.Y' }}<br>
+                                                        </span>
+                                                    </div>
+                                                    <div class="p_t">
+                                                        <div class="normal">
+                                                            <a href="{{ article.get_absolute_url }}">{{ article.preview }}</a>
+                                                            <span class="active">
+                                                                <a href="{{ article.get_absolute_url }}">&gt;&gt;</a>
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="bg_orange_l w7"><div style="width:7px; height:7px"><!-- --></div></td>
+                                    <td class="wp100 bg_orange_c"><div style="width:1px; height:7px"><!-- --></div></td>
+                                    <td class="bg_orange_r w7"><div style="width:7px; height:7px"><!-- --></div></td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            {% endwith %}
+        {% endif %}
+    {% endif %}
+
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp60 bl_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_politic %}
+            </td>
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            <td class="valign-top wp40 or_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_lugansk24 %}
+            </td>
+        </tr>
+    </table>
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp60 bl_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_economic %}
+            </td>
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            <td class="valign-top wp40 or_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_dorenko %}
+            </td>
+        </tr>
+    </table>
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp60 bl_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_accidents %}
+            </td>
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            <td class="valign-top wp40 or_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_krasnoetv %}
+            </td>
+        </tr>
+    </table>
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp60 bl_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_fpolitic %}
+            </td>
+        </tr>
+    </table>
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp60 bl_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_society %}
+            </td>
+            <td class="w7">
+                <div style="width:7px; height:1px"><!-- --></div>
+            </td>
+            <td class="valign-top wp40 or_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_partner_nevextv %}
+            </td>
+        </tr>
+    </table>
+    <div style="width:1px; height:7px"><!-- --></div>
+
+    <table class="full-table">
+        <tr>
+            <td class="valign-top wp60 bl_inside">
+                {% include 'incl/tile/video.html' with material=materials.video_national %}
+            </td>
+        </tr>
+    </table>
+    <div style="width:1px; height:7px"><!-- --></div>
+
 {% endblock %}
