--- a/templates/authors/incl/cover_name.html
+++ b/templates/authors/incl/cover_name.html
@@ -1,7 +1,7 @@
 {% if incl_microdata %}
     <em itemscope itemtype="http://schema.org/Person">
         {% if article.main_author %}
-            <a rel="author" itemprop="url" href="{% url 'authors:detail' article.main_author.id %}.html">
+            <a rel="author" itemprop="url" href="{% url 'authors:detail' article.main_author.id %}">
                 <em itemprop="name">{{ article.main_author.cover_name }}</em>
             </a>
         {% else %}
@@ -10,7 +10,7 @@
     </em>
 {% else %}
     {% if article.main_author %}
-        <a rel="author" href="{% url 'authors:detail' article.main_author.id %}.html">
+        <a rel="author" href="{% url 'authors:detail' article.main_author.id %}">
             <em>{{ article.main_author.cover_name }}</em>
         </a>
     {% else %}
