--- a/templates/incl/forum_message_form.html
+++ b/templates/incl/forum_message_form.html
@@ -1,20 +1,39 @@
 <div id="forum_form">
-    <form action="/dialog/replay.html" method=POST >
+    <form action="{% url 'articles:create_comment' %}" method="POST">
         {% csrf_token %}
-        <input type=hidden name="thread_id" value='{{ article.id }}'>
-        <input type=hidden name="parent_id" id="comment_parent" value="">
-        <input type=hidden name="back" value="{{ request.get_full_path }}">
+        {% if article %}
+            <input type=hidden name="article" value="{{ article.id }}">
+        {% else %}
+            <input type=hidden name="article" value="{{ form.article.value }}">
+        {% endif %}
+        <input type=hidden name="parent" value="{{ form.parent.value }}" id="comment_parent">
         <table class="noborder wp90">
             <tr>
 				<td class="normal w100"><b>Ваше имя:</b></td>
-				<td><input maxlength=50 name="username" value="" type="text" style="font-size:12px"></td>
+				<td>
+                    {% if form.username.errors %}
+                        {% for error in form.username.errors %}
+                            <span class="normal" style="color:red">{{ error|escape }}</span>
+                        {% endfor %}
+                        <br>
+                    {% endif %}
+                    <input type="text" name="username" value="{{ form.username.value }}" maxlength="255" style="font-size:12px">
+                </td>
 			</tr>
 			<tr>
 				<td colspan="2"><div style="width:1px; height:7px"><!-- --></div></td>
 			</tr>
 			<tr>
 				<td class="normal"><b>Заголовок:</b></td>
-				<td><input maxlength=100 name="name" id="comment_body" value="" type="text" style="font-size:12px;width:100%;"></td>
+				<td>
+                    {% if form.title.errors %}
+                        {% for error in form.title.errors %}
+                            <span class="normal" style="color:red">{{ error|escape }}</span>
+                        {% endfor %}
+                        <br>
+                    {% endif %}
+                    <input type="text" name="title" value="{{ form.title.value }}" maxlength="255" id="comment_body" style="font-size:12px;width:100%;">
+                </td>
 			</tr>
 			<tr>
 				<td colspan="2"><div style="width:1px; height:7px"><!-- --></div></td>
@@ -23,7 +42,13 @@
 				<td colspan="2" class="normal">
                     <b>Комментарий:</b>
                     <div style="width:1px; height:7px"><!-- --></div>
-                    <textarea name="body" rows="8" cols="8" style="width:100%;"></textarea>
+                    {% if form.content.errors %}
+                        {% for error in form.content.errors %}
+                            <span style="color:red">{{ error|escape }}</span>
+                        {% endfor %}
+                        <br>
+                    {% endif %}
+                    <textarea name="content" rows="8" cols="8" style="width:100%;">{{ form.content.value }}</textarea>
                     <div style="width:1px; height:7px"><!-- --></div>
                 </td>
 			</tr>
@@ -31,15 +56,15 @@
                 <tr>
                     <td class="w150 normal"><b>Введите число, указанное на картинке:</b></td>
                     <td>
-                        <img src="/captcha/i.gif?<% $token %>" width="80" height="30" alt=""><br />
-                        <input type="text" name="token" value="" style="width:86px"><br />
-                        <input type="hidden" name="ctoken" value="<% $token %>">
+                        <img src="/captcha/i.gif?<% $token %>" width="80" height="30" alt="">
+                        <br />
+                        <input type="text" name="captcha" value="" style="width:86px"><br />
                     </td>
                 </tr>
             {% endif %}
 			<tr>
 				<td colspan="2">
-                    <input name="submit" value="ответить" type="submit" class="but" style="font-size:12px">
+                    <input type="submit" name="submit" value="ответить" class="but" style="font-size:12px">
                 </td>
 			</tr>
 		</table>
