forum index page

--- a/templates/incl/header.html
+++ b/templates/incl/header.html
@@ -89,7 +89,7 @@
 		<td class="clear w2">&nbsp;</td>
 		<th>
             <div class="p_h2">
-                <a href="/dialog/">Форум</a>
+                <a href="{% url 'forum:index' %}">Форум</a>
             </div>
         </th>
 		<td class="w25 clear">
