--- a/templates/pages/opposition/base.html
+++ b/templates/pages/opposition/base.html
@@ -1,8 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base_wide.html' %}
 
 {% load static %}
-
-{% block content_width %}100{% endblock %}
 
 {% block content %}
     {% block main_section %}{% endblock %}
@@ -52,5 +50,3 @@
     <br>
     <br>
 {% endblock %}
-
-{% block sidebar %}{% endblock %}
